--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="invite_with_kakao">카카오톡으로 친구 초대 하기</string>
     <string name="logout">로그아웃</string>
     <string name="withdraw">회원탈퇴</string>
+    <string name="no_result">검색 결과 없음</string>
 </resources>
